update email in about me

--- a/_posts/1991-10-31-about.md
+++ b/_posts/1991-10-31-about.md
@@ -87,5 +87,5 @@ I could be doing this list forever. [Actually, I am](/games). -->
 
 If you would like to reach me:
 
-- [tariverdi.abbas@gmail.com](mailto:tariverdi.abbas@gmail.com)
+- [abbasta@abbasta.com](mailto:abbasta@abbasta.com)
 - [My Linkedin](https://www.linkedin.com/in/abbasta/)
