update readmore and aboutme

--- a/_posts/1991-10-31-about.md
+++ b/_posts/1991-10-31-about.md
@@ -81,6 +81,8 @@ I could be doing this list forever. [Actually, I am](/games). -->
 #### <span class="column-header">Miscellaneous</span>
 - <a class="coursera-logo" href="https://coursera.org/share/b96ef9d27214ae893fee65c6698b8152">Operations Research: Models and Applications</a>
 - <a class="coursera-logo" href="https://coursera.org/share/a8e71ee05ed81b2022a43de87554714e">Think Again: How to Understand Arguments</a>
+- <a class="coursera-logo" href="https://coursera.org/share/805ade8548c29def3871f70611b40940">Journey of the Universe: The Unfolding of Life</a>
+- <a class="coursera-logo" href="https://coursera.org/share/ea568b4d677c58cae2c858392ef26009">Journey Conversations: Weaving Knowledge and Action</a>
 </div>
 
 ## Contact
